<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Peso"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_un_valor"
        android:id="@+id/etEntradaPeso"
        android:inputType="numberDecimal"
        android:layout_margin="10dp"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:id="@+id/rgDE"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CategoryStyle"
                android:background="@color/categoria_peso"
                android:text="@string/de"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:checked="true"
                android:onClick="onClick"
                android:id="@+id/rbKGDE"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/g"
                android:onClick="onClick"
                android:id="@+id/rbGDE"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mg"
                android:onClick="onClick"
                android:id="@+id/rbMGDE"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_metrica"
                android:onClick="onClick"
                android:id="@+id/rbTMDE"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_imperial"
                android:onClick="onClick"
                android:id="@+id/rbTIDE"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libras"
                android:onClick="onClick"
                android:id="@+id/rbLIBRADE"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oz"
                android:onClick="onClick"
                android:id="@+id/rbOZDE"
                android:layout_weight="1"
                />
        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/rgA"
            android:layout_weight=".5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CategoryStyle"
                android:background="@color/categoria_peso"
                android:text="@string/a"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:enabled="false"
                android:onClick="onClick"
                android:layout_weight=".2"
                android:id="@+id/rbKGA"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/g"
                android:onClick="onClick"
                android:layout_weight=".2"
                android:id="@+id/rbGA"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mg"
                android:onClick="onClick"
                android:layout_weight=".2"
                android:id="@+id/rbMGA"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_metrica"
                android:onClick="onClick"
                android:layout_weight=".2"
                android:id="@+id/rbTMA"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_imperial"
                android:onClick="onClick"
                android:layout_weight=".2"
                android:id="@+id/rbTIA"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/libras"
                android:onClick="onClick"
                android:layout_weight=".2"
                android:id="@+id/rbLIBRAA"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oz"
                android:onClick="onClick"
                android:layout_weight=".2"
                android:id="@+id/rbOZA"
                />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CategoryStyle"
        android:background="@color/categoria_peso"
        android:layout_margin="10dp"
        android:id="@+id/tvResultadoPeso"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_margin="10dp"
        android:text="@string/convertir"
        android:layout_gravity="end"
        android:id="@+id/bConvertir"
        />
</LinearLayout>